--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
+    "install": "npm install --omit=dev",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
