--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "eden-back",
+  "name": "technicoders-back",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
-  },
-  "engines": {
-    "node": "16.x"
-  },
-  "railway": {
-    "buildCommand": "npm run build",
-    "startCommand": "npm start"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js -m production",
+    "dev": "nodemon index.js -m development",
+    "start:dev": "node --watch index.js -m development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "commander": "^11.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-compression": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.4",
+    "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
